--- a/civic-backend/package.json
+++ b/civic-backend/package.json
@@ -25,6 +25,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "socket.io": "^4.8.1",
+    "streamifier": "^0.1.1",
     "twilio": "^5.8.2",
     "uuid": "^11.1.0"
   }
